# cmake-starter-project

./: CMakeLists.txt  cookiecutter.json
cmake/: UpdateSubmodules.cmake
examples/: CMakeLists.txt  hello_world.cpp
include/math/: math.hpp
include/project/: hello.hpp
src/: CMakeLists.txt  hello.cpp  math.cpp
tests/: CMakeLists.txt  testmath.cpp
{{cookiecutter.project_name}}/: .gitmodules  CMakeLists.txt  init.sh
{{cookiecutter.project_name}}/examples/: do_stuff.cpp
{{cookiecutter.project_name}}/src/: CMakeLists.txt  math.cpp
